# qtgraphics-filament

./: CMakeLists.txt  CocoaGLContext.h  CocoaGLContext.mm  camera.cc  camera.h  filament_renderer.cpp  filament_renderer.h  main.cpp
cmake/: FindAssimp.cmake  FindFilament.cmake  FindGtestSource.cmake  FindOpenMesh.cmake  common.cmake
materials/: bakedTextureLit.mat  transparent.mat
